# freenove-esp32

./: .flake8  .gitignore  .pre-commit-config.yaml  .test.env  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml
src/: cfg_template.py
src/freenove_esp32/: __init__.py  cli.py
src/freenove_esp32/chip/: __init__.py  boot.py
src/freenove_esp32/chip/helpers/: __init__.py  logger.py
src/freenove_esp32/chip/lib/ulogger/: __init__.py
src/freenove_esp32/scripts/: __init__.py
tests/: test_cli.py
